--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=ClickUp
+spring.datasource.url=jdbc:postgresql://localhost:5432/ClickUp
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+
+spring.security.user.name=admin
+spring.security.user.password=1111
